--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Practica uno con SASS</title>
 </head>
 <body>
-    
+    <h1>Esta e suna practica con SASS</h1>
+    <div>
+        <p>Hola Soy</p>
+    </div>
+    <div>
+        <p> Eduardo Sandoval</p>        
+    </div>
 </body>
 </html>
