--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Esta e suna practica con SASS</h1>
-    <div>
+    <div class="caja">
+        <h2>Encabezado</h2>
         <p>Hola Soy</p>
     </div>
     <div>
