--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <h1>Esta e suna practica con SASS</h1>
-    <div class="caja">
+    <div class="caja1">
         <h2>Encabezado</h2>
         <p>Hola Soy</p>
     </div>
-    <div>
+    <div class="caja1">
+        <p> Eduardo Sandoval</p>        
+    </div>
+    <div class="caja2">
+        <h2>Encabezado</h2>
+        <p>Hola Soy</p>
+    </div>
+    <div class="caja2">
         <p> Eduardo Sandoval</p>        
     </div>
 </body>
