--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Esta e suna practica con SASS</h1>
+    <h1>Esta es una practica con SASS</h1>
     <div class="caja1">
         <h2>Encabezado</h2>
         <p>Hola Soy</p>
