--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <p>Hola Soy</p>
     </div>
     <div class="caja1">
-        <p> Eduardo Sandoval</p>        
+        <p class="nombre"> Eduardo Sandoval</p>              
     </div>
     <div class="caja2">
         <h2>Encabezado</h2>
         <p>Hola Soy</p>
     </div>
     <div class="caja2">
-        <p> Eduardo Sandoval</p>        
+        <p class="nombre"> Eduardo Sandoval</p>        
     </div>
 </body>
 </html>
